[gd_scene load_steps=8 format=3 uid="uid://boefcrvsovj3k"]

[ext_resource type="Script" path="res://Scripts/lumber_jacks.gd" id="1_efx5x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_invop"]
size = Vector3(0.776247, 0.792707, 0.850504)

[sub_resource type="BoxMesh" id="BoxMesh_1dor5"]
size = Vector3(0.21, 0.89, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_x1wou"]
size = Vector3(2.14481, 3.50766, 2.20147)

[sub_resource type="BoxShape3D" id="BoxShape3D_600qt"]

[sub_resource type="BoxMesh" id="BoxMesh_bxshd"]
size = Vector3(0.645, 0.865, 0.46)

[sub_resource type="BoxMesh" id="BoxMesh_75c3w"]
size = Vector3(0.5, 0.5, 0.5)

[node name="LumberJacks" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00722218, 0, 0.000899792)
script = ExtResource("1_efx5x")

[node name="PinJoint3D2" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.305149, 0)
node_a = NodePath("../LowerBody")
node_b = NodePath("../UpperBody")

[node name="LowerBody" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.305149, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="LowerBody"]
shape = SubResource("BoxShape3D_invop")

[node name="Legs" type="MeshInstance3D" parent="LowerBody"]
mesh = SubResource("BoxMesh_1dor5")
skeleton = NodePath("../CollisionShape3D")

[node name="Area3D" type="Area3D" parent="LowerBody"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="LowerBody/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.398809, 0)
shape = SubResource("BoxShape3D_x1wou")

[node name="UpperBody" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.558282, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="UpperBody"]
shape = SubResource("BoxShape3D_600qt")

[node name="Core" type="MeshInstance3D" parent="UpperBody"]
mesh = SubResource("BoxMesh_bxshd")

[node name="Head" type="MeshInstance3D" parent="UpperBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.769006, 0)
mesh = SubResource("BoxMesh_75c3w")

[connection signal="area_entered" from="LowerBody/Area3D" to="." method="AreaEntered"]
